Composer: Prefer HTML over image on LibreOffice data paste
Hi! When inserting a table from LibreOffice Calc in html editor mode, an image is inserted instead of a table that can be edited.
Reproduction steps:
- Open LibreOffice Calc
- Fill multiple cells with arbitrary text data
- Copy filled cells
- Create a new email in Evolution
- Put editor in html mode
- Paste copied cells
Expected Behavior: An editable table with filled cells will be inserted.
Actual behavior: Table image inserted
In GMail, when inserting a table from LibreOffice Calc, an editable table is inserted
Edited by Milan Crha