I#1714 - Composer: Prefer HTML over image on LibreOffice data paste

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1714